--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
     </div>
     <div class="spikes"></div>
     <!-- End FeaturedPrice -->
-        <!-- Start Discounts -->
-        <div class="discount">
-          <div class="discount-desc ">
+        <!-- Start specials -->
+        <div class="special">
+          <div class="special-desc ">
               <div class="top">
                   <i class="icon fa fa-quote-left fa-lg"></i>
-                  <h2 class="discount-title">DisCounT</h2>
-                  <span class="discount-subtitle">(marketing)</span>
+                  <h2 class="special-title">special</h2>
+                  <span class="special-subtitle">(marketing)</span>
               </div> 
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, sapiente! Tenetur in ipsam pariatur est a voluptas deleniti, error, laboriosam laborum sequi, harum fugiat facere necessitatibus! Dicta id nesciunt eveniet, tempore fugiat aut culpa iusto reiciendis saepe sint veritatis odit neque exercitationem alias numquam rerum officiis blanditiis unde soluta labore.
               </p>
@@ -190,20 +190,20 @@
                   <span></span>
               </div> 
               </div> 
-          <div class="discount-item">
-              <div class="discount-item-info">
+          <div class="special-item">
+              <div class="special-item-info">
                   <h2>SMART</h2>
-                  <button>20% DISCOUNT</button>
+                  <button>20% special</button>
               </div> 
           </div> 
-          <div class="discount-item">
-              <div class="discount-item-info">
+          <div class="special-item">
+              <div class="special-item-info">
                 <h2>DIGITAL</h2>
-                <button>60% DISCOUNT</button>
+                <button>60% special</button>
               </div> 
           </div> 
       </div> 
-    <!-- End Discounts -->
+    <!-- End specials -->
 
     <!-- start icons -->
     <div class="iconImg">
